# ooxmlsdk-test-suite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  corpus-manifest.toml
corpus/: README.md
corpus/Apache-POI/: manifest.toml
corpus/ClosedXML/: manifest.toml
corpus/LibreOffice/: manifest.toml
corpus/Open-XML-SDK/: manifest.toml
corpus/Pandoc/: manifest.toml
corpus/libemf2svg/: manifest.toml
corpus_pdf_conv/: README.md  environment.json  golden-errors.toml
corpus_pdf_conv/Apache-POI/: manifest.jsonl
corpus_pdf_conv/LibreOffice/: manifest.jsonl
corpus_pdf_conv/Open-XML-SDK/: manifest.jsonl
crates/emfsdk-test/: Cargo.toml
crates/emfsdk-test/src/: lib.rs
crates/emfsdk-test/tests/: corpus_roundtrip.rs  office_embedded_roundtrip.rs  render.rs  upstream_units.rs
crates/olecfsdk-corpus-test-support/: Cargo.toml
crates/olecfsdk-corpus-test-support/src/: lib.rs  manifest.rs
crates/olecfsdk-roundtrip-tests/: Cargo.toml  build.rs
crates/olecfsdk-roundtrip-tests/src/: lib.rs
crates/olecfsdk-roundtrip-tests/tests/: apache_poi_cfb_roundtrip.rs  classic_office_file_roundtrip.rs  doc_fib_roundtrip.rs  libreoffice_cfb_roundtrip.rs  ole_control_roundtrip.rs  oleps_roundtrip.rs  ppt_record_roundtrip.rs  vba_compression_roundtrip.rs  xls_biff_roundtrip.rs
crates/olecfsdk-test/: Cargo.toml  README.md  coverage-evidence.json  coverage-ratchet.json
crates/olecfsdk-test/benches/: allocation_profile.rs  file_roots.rs
crates/olecfsdk-test/src/: corpus.rs  lib.rs
crates/olecfsdk-test/tests/: coverage_ratchet.rs  file_root_public_api.rs  ooxml_conversion.rs
crates/ooxmlsdk-bench/: Cargo.toml
crates/ooxmlsdk-bench/benches/: formula.rs  package_sheet.rs  package_slides.rs  package_word.rs  pdf_render.rs  xml.rs
crates/ooxmlsdk-bench/benches/common/: package.rs  xml.rs
crates/ooxmlsdk-corpus-test-support/: Cargo.toml
crates/ooxmlsdk-corpus-test-support/data/: schema-float-rules.json
crates/ooxmlsdk-corpus-test-support/src/: lib.rs  manifest.rs  roundtrip.rs
crates/ooxmlsdk-corpus-test-support/tests/: float_rules_sync.rs
crates/ooxmlsdk-fonts-test/: Cargo.toml
crates/ooxmlsdk-formula-test/: Cargo.toml
crates/ooxmlsdk-formula-test/src/: fods.rs  lib.rs
crates/ooxmlsdk-formula-test/tests/: address.rs  evaluation.rs  fods_corpus.rs  printer_roundtrip.rs  program.rs  shared_formula.rs  xlsx_import.rs
crates/ooxmlsdk-layout-test/: Cargo.toml
crates/ooxmlsdk-pdf-test/: Cargo.toml
crates/ooxmlsdk-pdf-test/src/: lib.rs  office_golden.rs  office_golden_corpus.rs  pdf_extract.rs  render.rs
crates/ooxmlsdk-pdf-test/tests/: core_docx_pdf_fixtures.rs  font_diagnostics.rs  mapped_docx_pdf_fixtures.rs  mapped_pptx_pdf_fixtures.rs  mapped_xlsx_pdf_fixtures.rs  metafile_pdf.rs  office_golden_corpus.rs  office_golden_docx.rs  office_golden_pptx.rs  office_golden_xlsx.rs  pdfexport_fixtures.rs
crates/ooxmlsdk-roundtrip-tests/: Cargo.toml  build.rs
crates/ooxmlsdk-roundtrip-tests/src/: lib.rs
crates/ooxmlsdk-roundtrip-tests/tests/: apache_poi_roundtrip.rs  closedxml_roundtrip.rs  libreoffice_roundtrip.rs  open_xml_sdk_roundtrip.rs  pandoc_roundtrip.rs
crates/ooxmlsdk-test/: Cargo.toml
crates/ooxmlsdk-test/src/: fixtures.rs  lib.rs
crates/ooxmlsdk-test/tests/: file_validators.rs  markup_compatibility_calibration.rs  open_xml_sdk_fixtures.rs  packages.rs  presentation.rs  properties.rs  simple_types.rs  spreadsheet.rs  validators.rs  wordprocessing.rs
docs/: BENCHMARKS.md
docs/emfsdk-test/: Apache-POI.md  LibreOffice.md  libemf2svg.md
docs/ooxmlsdk-fonts-test/: LibreOffice.md
docs/ooxmlsdk-formula-test/: Apache-POI.md  Gnumeric.md  LibreOffice.md
docs/ooxmlsdk-layout-test/: LibreOffice.md
docs/ooxmlsdk-pdf-test/: LibreOffice.md  corpus_pdf_conv.md
docs/ooxmlsdk-test/: Open-XML-SDK.md
docs/round-trip/: Apache-POI.md  ClosedXML.md  LibreOffice.md  Open-XML-SDK.md  Pandoc.md  (+1 more)
licenses/: README.md
references/: README.md  [MS-CFB]-240423.docx  [MS-CTDOC]-240820.docx  [MS-CTXLS]-240820.docx  [MS-DOCX]-251113.docx  [MS-DOC]-260217.docx  [MS-DTYP]-241119.docx  [MS-EMFPLUS]-240423.docx  [MS-EMF]-240423.docx  [MS-ERREF]-241119.docx  [MS-IPFF]-160929.docx  [MS-LCID]-240423.docx  [MS-LISTSWS]-240820.docx  [MS-OAUT]-240423.docx  [MS-ODRAWXML]-260217.docx  [MS-OE376]-220816.docx  [MS-OFFCRYPTO]-260217.docx  [MS-OFFDI]-240820.docx  [MS-OFORMS]-250819.docx  [MS-OGRAPH]-240820.docx  [MS-OI29500]-260519.docx  [MS-OLEDS]-240423.docx  [MS-OLEPS]-240423.docx  [MS-OSHARED]-251113.docx  [MS-OVBA]-260519.docx  [MS-OWEXML]-240820.docx  [MS-OXCDATA]-250520.docx  [MS-PRSTFR]-211005.docx  [MS-RMPR]-240423.docx  [MS-RPRN]-250811.docx  [MS-UCODEREF]-240423.docx  [MS-VIEWSS]-240820.docx  [MS-WMF]-240423.docx  [MS-WSSCAML]-240820.docx  [MS-WSSTS]-211005.docx  [MS-XLDM]-250819.docx  [MS-XLSX]-260519.docx
scripts/: convert_office_corpus.ps1  office_corpus_annotations.jsonl  office_corpus_batch_100.txt  office_corpus_batch_100_10.txt  office_corpus_batch_100_11.txt  office_corpus_batch_100_12.txt  office_corpus_batch_100_13.txt  office_corpus_batch_100_14.txt  office_corpus_batch_100_15.txt  office_corpus_batch_100_16.txt  office_corpus_batch_100_17.txt  office_corpus_batch_100_18.txt  office_corpus_batch_100_19.txt  office_corpus_batch_100_2.txt  office_corpus_batch_100_20.txt  office_corpus_batch_100_21.txt  office_corpus_batch_100_22.txt  office_corpus_batch_100_23.txt  office_corpus_batch_100_24.txt  office_corpus_batch_100_25.txt  office_corpus_batch_100_26.txt  office_corpus_batch_100_27.txt  office_corpus_batch_100_28.txt  office_corpus_batch_100_29.txt  office_corpus_batch_100_3.txt  office_corpus_batch_100_30.txt  office_corpus_batch_100_31.txt  office_corpus_batch_100_32.txt  office_corpus_batch_100_33.txt  office_corpus_batch_100_34.txt  office_corpus_batch_100_35.txt  office_corpus_batch_100_36.txt  office_corpus_batch_100_37.txt  office_corpus_batch_100_38.txt  office_corpus_batch_100_39.txt  office_corpus_batch_100_4.txt  office_corpus_batch_100_40.txt  office_corpus_batch_100_41.txt  office_corpus_batch_100_42.txt  office_corpus_batch_100_43.txt  (+18 more)
(+26 files in other folders)
