[workspace]
resolver = "3"
members = [
  "crates/ooxmlsdk-corpus-test-support",
  "crates/ooxmlsdk-roundtrip-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ooxmlsdk = { path = "../ooxmlsdk/crates/ooxmlsdk", default-features = false }
ooxmlsdk-corpus-test-support = { path = "crates/ooxmlsdk-corpus-test-support" }
quick-xml = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.9.8"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
