[package]
name = "olecfsdk-corpus-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
olecfsdk = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
