[package]
name = "olecfsdk-roundtrip-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
olecfsdk-corpus-test-support = { workspace = true }

[build-dependencies]
serde = { workspace = true }
toml = { workspace = true }

