[package]
name = "olecfsdk-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
olecfsdk = { workspace = true }
olecfsdk-corpus-test-support = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

