[package]
name = "olecfsdk-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
olecfsdk = { workspace = true }
olecfsdk-ooxml = { workspace = true }
olecfsdk-corpus-test-support = { workspace = true }
ooxmlsdk = { workspace = true, features = ["parts"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
zip = { workspace = true }

[[bench]]
name = "file_roots"
harness = false

[[bench]]
name = "allocation_profile"
harness = false
