[package]
name = "ooxmlsdk-bench"
version.workspace = true
edition.workspace = true
rust-version = "1.92"
publish.workspace = true
license.workspace = true

[dependencies]
ooxmlsdk = { workspace = true, features = ["parts"] }
ooxmlsdk-corpus-test-support = { workspace = true }
ooxmlsdk-formula = { workspace = true }
ooxmlsdk-pdf = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "package_word"
harness = false

[[bench]]
name = "package_sheet"
harness = false

[[bench]]
name = "package_slides"
harness = false

[[bench]]
name = "xml"
harness = false

[[bench]]
name = "formula"
harness = false

[[bench]]
name = "pdf_render"
harness = false
