[package]
name = "ooxmlsdk-corpus-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ooxmlsdk = { workspace = true, features = ["parts"] }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
