[package]
name = "ooxmlsdk-formula-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
ooxmlsdk = { workspace = true }
ooxmlsdk-corpus-test-support = { workspace = true }
ooxmlsdk-formula = { workspace = true }
quick-xml = { workspace = true }
