[package]
name = "ooxmlsdk-pdf-test"
version.workspace = true
edition.workspace = true
rust-version = "1.92"
publish.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
crc32fast = { workspace = true }
flate2 = { workspace = true }
image = { workspace = true }
lopdf = { workspace = true }
ooxmlsdk-pdf = { workspace = true }
pdfium-render = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
